objects/Contract__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager_Comments__c</fullName>
        <label>Contract Creator Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts33</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accurate_Contract_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the contract type and template correlate to the content of the contract document?</inlineHelpText>
        <label>Contract type &amp; template match content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActiveContractEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used in WF rule</description>
        <label>ActiveContractEmailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount (USD)</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;500,001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500,001 - 5,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,000,001 - 10,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000,001 - 15,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15,000,001 - 17,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;17,000,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_High_Risk__c</fullName>
        <inlineHelpText>Such as: On-Highway, Aerospace, Oil &amp; Gas, Nuclear</inlineHelpText>
        <label>Is application high risk?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Awaiting_From_Group_User__c</fullName>
        <label>Approval Awaiting From Group/User</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>set in ContractTriggerHandler</description>
        <label>Approval Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Impact_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the business impact been reviewed with the applicable stakeholders within the business prior to Submitting for Approval and Signature?</inlineHelpText>
        <label>Business Impact has been reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Clause__c</fullName>
        <inlineHelpText>Contract contains provision to cancel within maximum 12 months’ notice (all Danfoss templates have a cancellation clause)</inlineHelpText>
        <label>Is there a cancellation clause?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Comments upto 255 characters only.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Description__c</fullName>
        <inlineHelpText>Highlights of the agreement, differences/changes to existing agreements, main elements needing attention</inlineHelpText>
        <label>Contract Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Duration__c</fullName>
        <formula>(Valid_To__c - Valid_From__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipName>ContractNew</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipName>ContractOld</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ContractSpecs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Collaboration</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appointed Service Partner Agreement (ASP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorised Service Centre Agreement (ASC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General / Other Sales Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of Intent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Sales Agreement (LTA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Disclosure Agreement - Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Disclosure Agreement - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Improvement Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain/Logistics Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Agreement - Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Agreement - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Voucher Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Channel__c</fullName>
        <formula>TEXT(Customer__r.Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Country__c</fullName>
        <formula>Customer__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Customer__r.Name</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_is_a_Competitor__c</fullName>
        <inlineHelpText>Example:  Parker, Honeywell, Bosch, Hydra-Force</inlineHelpText>
        <label>Customer is competitor to Danfoss Group</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EC_Approval_Reqd__c</fullName>
        <formula>IF(
    EC_Approval_Required__c = TRUE, 
    IMAGE( &quot;/img/func_icons/util/checkmark16.gif&quot;, &quot;True image&quot;),
    IMAGE( &quot;/img/func_icons/remove12.gif&quot;, &quot;False image&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EC Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set in ContractTriggerHandler</description>
        <label>EC Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electronic_Components_BA_ADT__c</fullName>
        <label>Electronic Components BA Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Electronic_Components_BA_Apl__c</fullName>
        <label>Electronic Components BA Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electronic_Components_BA_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electronic Components BA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts77</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Approvers__c</fullName>
        <label>Expected Approvers</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Role__c</fullName>
        <label>Expected Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Action__c</fullName>
        <label>Expiration Action</label>
        <picklist>
            <controllingField>Contract_Status__c</controllingField>
            <picklistValues>
                <fullName>Renew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Renew</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiring_Extension_In_90_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expiring Extension In 90 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiring_In_90_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked in Contract Expiration in 90 Days Email workflow rule and used in ContractTriggerHandler class to create expiration task. Is unchecked again in the same class after task is created.</description>
        <label>Expiring In 90 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>File_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>File Attached ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates the paper copy has been filed by the librarian</description>
        <label>Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_ADT__c</fullName>
        <label>Finance Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finance_Apl__c</fullName>
        <label>Finance Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FullyApprovedEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used in WF rule criteria</description>
        <label>FullyApprovedEmailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HPCC_BA_ADT__c</fullName>
        <label>HPCC BA Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HPCC_BA_Apl__c</fullName>
        <label>HPCC BA Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HPCC_BA_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HPCC BA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts73</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HPOC_BA_ADT__c</fullName>
        <label>HPOC BA Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HPOC_BA_Apl__c</fullName>
        <label>HPOC BA Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HPOC_BA_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HPOC BA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts75</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hard_Copy_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hard Copy Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hard_Copy_Status__c</fullName>
        <formula>IF(Filed__c, &quot;Filed&quot;, 
  IF(Returned__c, &quot;Returned&quot;, 
    IF(Sent_to_Customer__c, &quot;Sent to customer&quot;, 
      IF(Signed__c, &quot;Signed&quot;, &quot;&quot;
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hard Copy Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sales_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>captures name of highest level of sales approval for create hard copy status tasks</description>
        <label>Last Sales Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate the record was created prior to version 3 (deployed Feb 2015)</description>
        <label>Legacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Counsel_ADT__c</fullName>
        <label>Legal Counsel Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Counsel_Apl__c</fullName>
        <label>Legal Counsel Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Counsel_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Counsel Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts52</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Reqd__c</fullName>
        <formula>IF( 
Legal_Review_Required__c = TRUE, 
IMAGE( &quot;/img/func_icons/util/checkmark16.gif&quot;, &quot;True image&quot;), 
IMAGE( &quot;/img/func_icons/remove12.gif&quot;, &quot;False image&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Review Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set in ContractTriggerHandler</description>
        <label>Legal Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_CC_BA_ADT__c</fullName>
        <label>MP-CC BA Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MP_CC_BA_Apl__c</fullName>
        <label>MP-CC BA Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MP_CC_BA_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MP-CC BA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts71</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MP_OC_BA_ADT__c</fullName>
        <label>MP-OC BA Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MP_OC_BA_Apl__c</fullName>
        <label>MP-OC BA Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MP_OC_BA_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MP-OC BA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Dominated_By_Danfoss__c</fullName>
        <inlineHelpText>Answer to the best of your knowledge</inlineHelpText>
        <label>Is market dominated by Danfoss Group?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MissingStuff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MissingStuff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>More_Than_3_Years__c</fullName>
        <inlineHelpText>If contract duration is 3 years or longer, legal review AND PSLT and EC Approval is required before signing</inlineHelpText>
        <label>Is contract duration more than 3 years?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motors_BA_ADT__c</fullName>
        <label>Motors BA Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Motors_BA_Apl__c</fullName>
        <label>Motors BA Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motors_BA_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Motors BA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts81</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Update__c</fullName>
        <label>New or Updated Contract</label>
        <picklist>
            <picklistValues>
                <fullName>New Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision / Update</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PS_CEO_Approval_Reqd__c</fullName>
        <formula>IF( 
PS_CEO_Approval_Required__c = TRUE, 
IMAGE( &quot;/img/func_icons/util/checkmark16.gif&quot;, &quot;True image&quot;), 
IMAGE( &quot;/img/func_icons/remove12.gif&quot;, &quot;False image&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PS CEO Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_CEO_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set in ContractTriggerHandler</description>
        <label>PS CEO Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PVG_Valves_BA_ADT__c</fullName>
        <label>PVG Valves BA Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PVG_Valves_BA_Apl__c</fullName>
        <label>PVG Valves BA Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PVG_Valves_BA_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PVG Valves BA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts79</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Electronic Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP-OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP-CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVG Valves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steering</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>Why are we asked to enter this agreement</inlineHelpText>
        <label>Reason / Driver for this contract</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Customer__r.Country__r.Contract_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RejectedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>when checked this indicates the contract has been rejected. used for reference when resubmitting for approval to check the Resubmitted checkbox field.</description>
        <label>RejectedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RejectionEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used in WF rule criteria</description>
        <label>RejectionEmailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Contracts__c</fullName>
        <inlineHelpText>Example: &quot;Rapid Delivery Center&quot; linked to &quot;Distributor Agreement&quot;</inlineHelpText>
        <label>Related Contract(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates the paper copy has been returned from the customer</description>
        <label>Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <inlineHelpText>Date to review extended contract</inlineHelpText>
        <label>Extension End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewed_With_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed with legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Id__c</fullName>
        <formula>Customer__r.SAP_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Director_ADT__c</fullName>
        <label>Sales Director Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Director_Apl__c</fullName>
        <label>Sales Director Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Director_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Director Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Executive_ADT__c</fullName>
        <label>Sales Executive Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Executive_Apl__c</fullName>
        <label>Sales Executive Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Executive_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Executive Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts51</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_ADT__c</fullName>
        <label>Sales Manager Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Apl__c</fullName>
        <label>Sales Manager Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts00</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_of_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <label>Sales Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval-Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_VP_ADT__c</fullName>
        <label>Sales VP Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_VP_Apl__c</fullName>
        <label>Sales VP Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_VP_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales VP Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates the signed hard copies have been sent to customer</description>
        <label>Sent to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates the paper copy has been printed and signed</description>
        <label>Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Steering_BA_ADT__c</fullName>
        <label>Steering BA Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Steering_BA_Apl__c</fullName>
        <label>Steering BA Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steering_BA_Apr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Steering BA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts83</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmittedForStakeholderReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set in custom button</description>
        <label>Submitted for Stakeholder Review</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>